Fix all lang lists being empty